# Tahdheeb

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
example/: test.py
src/arabic_utility/: arbchar_util.py  diac_util.py  num_util.py
src/farasa_processing/: ParallelTextProcessing.java  apply_farasa.py  apply_farasa_parallel.py
src/preprocessing/: text_content.py  text_structure.py  text_verification.py
tahdheeb/arabic_utility/: arbchar_util.py  diac_util.py  punc_util.py
tahdheeb/preprocessing/: text_content.py  text_structure.py  text_verification.py
tests/: test.py
