[project]
name = "Tahdheeb"
version = "0.1.0"
authors = [
  { name="Ehsaneddin Asgari and Yassine Elkheir", email="easgari@hbku.edu.qa" },
]
description = "An Arabic Preprocessing Toolkit for Pretraining of LLM"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ehsanasgari/Tahdheeb"
Issues = "https://github.com/ehsanasgari/Tahdheeb/issues"
